fix(): add gap to containers

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -260,6 +260,7 @@ header {
 
 .options {
   align-items: unset;
+  gap: 1.5rem;
 }
 .option {
   justify-content: unset;
